Adicionar passos da receita
adicionar passos relativos à preparação da receita

--- a/recipes/bacalhauabras.html
+++ b/recipes/bacalhauabras.html
@@ -26,6 +26,19 @@
         <li>Eggs</li>
         <li>Black Olives</li>
         <li>Onions</li>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Peel the potatoes and cut them into thin sticks (if you are using regular potatoes)(You can use "palha" friend potatoes)</li>
+            <li>Remove skin and bones from the cod and shred it</li>
+            <li>Fry the potatoes you peeled in <strong>step1</strong></li>
+            <li>Sauté the chopped onion with garlic and a bay leaf</li>
+            <li>When the onion and garlic starts to become soft, add the shredded cod and cover the pan</li>
+            <li>cook over low heat until the cod turns white</li>
+            <li><strong>remove the bay leaf</strong> from the mixture and add the fries </li>
+            <li>Add the eggs, previously beaten and stir them gently, allowing them to coat all the ingredients. <strong>DONT LET THEM COOK AND DRY OUT TOO MUCH!</strong></li>
+            <LI>Before serving, sprinkle with chopped parsly and decore with Olives</LI>
+        </ol>
     </ul>
 </body>
 </html>
