fix links not working
fix the direction in the links

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Odin Recipes</h1>
     
     <ul>
-        <li><a href="bacalhauabras.html"> Bacalhau à Brás </a></li>
-        <li> <a href="mushroomstew.html"> Mushroom Stew</a> </li> 
+        <li><a href="./recipes/bacalhauabras.html"> Bacalhau à Brás </a></li>
+        <li> <a href="./recipes/mushroomstew.html"> Mushroom Stew</a> </li> 
     </ul>
 
 </body>
