--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <h1 id="title">Galaxy Cuisine</h1>
     
     
-    <ul>
-        <li class="prato um"><a href="./recipes/bacalhauabras.html"> Bacalhau à Brás </a></li>
+    <div>
+        <p class="prato um"> <button> <a href="./recipes/bacalhauabras.html"> Bacalhau à Brás </a> </button></p>
         <p></p>
-        <li class="prato dois"> <a href="./recipes/mushroomstew.html"> Mushroom Stew</a> </li> 
+        <p class="prato dois"> <button> <a href="./recipes/mushroomstew.html"> Mushroom Stew</a> </button> </p> 
+    </div>
 </body>
 </html>
